--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                         class="btn btn-primary">
                         動画を生成
                     </button>
+                    <video ref="videoPlayer" controls class="video-player"></video>
                 </div>
                 
                 <div class="status">
