--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
                 </div>
             </div>
         </main>
+        
+        <footer>
+            <p><a href="https://github.com/cho45/ticker-generator" target="_blank">GitHub</a></p>
+        </footer>
     </div>
     
     <script type="module" src="app.js"></script>
